[package]
name = "ads123x"
version = "0.1.0"
edition = "2021"
authors = ["Adrian Wowk <adrian@adom.inc>"]
license = "MIT"

[dependencies]
embedded-hal = "1.0.0"

defmt = { version = "0.3.10", optional = true }
embedded-hal-async = { version = "1.0.0", optional = true }

[features]
default = []

defmt = ["dep:defmt"]
embedded-hal-async = ["dep:embedded-hal-async"]
